--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "connect-session-sequelize": "^8.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
